--- a/css.css
+++ b/css.css
@@ -4,34 +4,20 @@ body {
 }
 
 #draw-animation {
-    /* width: 90%;
-    height: 90%;
-    min-width: 90%;
-    min-height: 90%; */
-
     height: 700px;
-
-    /* margin: 0px 20px; */
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
     background-color: lightblue;
-    /* border-radius: 15px; */
-    /* box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1); */
 }
 
 .button {
-    border: 0px;
-    background: #fcfcfc;
+    border: 1px solid gray;
+    border-radius: 100px;
+    transition: border-color .2s linear;
+    background: #ffffff;
     padding: 10px 15px;
-    margin: 15px;
+    margin: 10px;
     font-size: 20pt;
-    border-radius: 20px;
-    box-shadow: 0px 10px 30px #7E6D5766;
-
-    
+    border-radius: 100px;
+    /* box-shadow: 0px 10px 30px #7E6D5766; */
     
     font-size: 20px;
     font-weight: 600;
@@ -43,22 +29,20 @@ body {
     box-shadow: inset 0 0 5px rgba(0, 0, 0, .5);
 } */
 
-/* .button:hover {
-    background: #d9d9d9;
-} */
+.button:hover {
+    border: 1px solid black;
+}
 
 .slider {
-    /* width: 500px; */
     height: 30px;
     padding: 10px 15px;
-    margin: 15px;
-    /* padding-left: 40px; */
-    /* float: right; */
-    background: #fcfcfc;
-    border-radius: 20px;
+    margin: 10px;
+    background: #ffffff;
+    border-radius: 100px;
+    border: 1px solid gray;
     display: flex;
     align-items: center;
-    box-shadow: 0px 15px 30px #7E6D5766;
+    /* box-shadow: 0px 15px 30px #7E6D5766; */
 }
 
 .slider p {
