--- a/css.css
+++ b/css.css
@@ -9,28 +9,21 @@ body {
 }
 
 .button {
-    border: 1px solid gray;
+    border: 2px solid black;
     border-radius: 100px;
     transition: border-color .2s linear;
     background: #ffffff;
     padding: 10px 15px;
     margin: 10px;
-    font-size: 20pt;
     border-radius: 100px;
-    /* box-shadow: 0px 10px 30px #7E6D5766; */
-    
     font-size: 20px;
     font-weight: 600;
     font-family: Open Sans;
     color: black;
 }
-/* 
-.button:active {
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, .5);
-} */
 
 .button:hover {
-    border: 1px solid black;
+    border: 2px solid gray;
 }
 
 .slider {
@@ -39,17 +32,16 @@ body {
     margin: 10px;
     background: #ffffff;
     border-radius: 100px;
-    border: 1px solid gray;
-    display: flex;
+    border: 2px solid black;
+    display: inline-flex;
     align-items: center;
-    /* box-shadow: 0px 15px 30px #7E6D5766; */
+    justify-content: space-between;
 }
 
 .slider p {
     font-size: 20px;
     font-weight: 600;
     font-family: Open Sans;
-    /* padding-left: 15px; */
     color: black;
 }
 
@@ -59,8 +51,6 @@ body {
     height: 2px;
     margin: 0px 25px;
     background: black;
-    border: none;
-    outline: none;
 }
 
 .slider input[type="range"]::-webkit-slider-thumb {
