--- a/css.css
+++ b/css.css
@@ -5,6 +5,7 @@ body {
 
 #draw-animation {
     height: 700px;
+    width: 901px;
     background-color: lightblue;
 }
 
@@ -16,10 +17,7 @@ body {
     padding: 10px 15px;
     margin: 10px;
     border-radius: 100px;
-    font-size: 20px;
-    font-weight: 600;
-    font-family: Open Sans;
-    color: black;
+    display: inline-flex;
 }
 
 .button:hover {
@@ -27,7 +25,7 @@ body {
 }
 
 .slider {
-    height: 30px;
+    /* height: 30px; */
     padding: 10px 15px;
     margin: 10px;
     background: #ffffff;
@@ -35,14 +33,10 @@ body {
     border: 2px solid black;
     display: inline-flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .slider p {
-    font-size: 20px;
-    font-weight: 600;
-    font-family: Open Sans;
-    color: black;
+    margin: 0;
 }
 
 .slider input[type="range"] {
@@ -55,6 +49,7 @@ body {
 
 .slider input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none !important;
+    transition: background .2s linear;
     width: 15px;
     height: 15px;
     background: white;
@@ -65,4 +60,18 @@ body {
 
 .slider input[type="range"]::-webkit-slider-thumb:hover {
     background: gray;
+}
+
+.interface,
+.interface button {
+    font-size: 20px;
+    font-weight: 500;
+    font-family: "Open Sans";
+    color: black;
+}
+
+.right {
+    min-width: 30px;
+    float: right;
+    text-align: right;
 }
