--- a/css.css
+++ b/css.css
@@ -47,6 +47,7 @@ body {
 
 .slider input[type="range"] {
     -webkit-appearance: none !important;
+    appearance: none !important;
     width: 300px;
     height: 2px;
     margin: 0px 25px;
@@ -54,6 +55,7 @@ body {
 
 .slider input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none !important;
+    appearance: none !important;
     transition: background .2s linear;
     width: 15px;
     height: 15px;
