--- a/css.css
+++ b/css.css
@@ -21,7 +21,6 @@ body {
 .theme {
     border: 0px;
     border-radius: 100px;
-    /* padding: 10px 10px; */
     width: 40px;
     height: 40px;
     position: absolute;
@@ -31,13 +30,11 @@ body {
 }
 
 .slider {
-    /* height: 30px; */
     padding: 10px 15px;
     margin: 10px;
     border-radius: 100px;
     display: inline-flex;
     align-items: center;
-    /* transition: border-color .2s linear; */
     transition: .2s linear;
 }
 
@@ -51,12 +48,13 @@ body {
     width: 300px;
     height: 2px;
     margin: 0px 25px;
+    transition: .2s linear;
 }
 
 .slider input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none !important;
     appearance: none !important;
-    transition: background .2s linear;
+    /* transition: .2s linear; */
     width: 15px;
     height: 15px;
     border-radius: 50%;
