--- a/light-theme.css
+++ b/light-theme.css
@@ -1,34 +1,40 @@
+:root {
+    --light-accent: #eceef0;
+    --light-hover: #dddfe5;
+    --light-outline: black;
+}
+
 body {
     background-color: #fbfbfb;
 }
 
 #draw-animation {
-    background-color: lightblue;
+    background-color: var(--light-accent);
 }
 
 .button, .theme {
-    background: #eceef0;
+    background: var(--light-accent);
 }
 
 .button:hover, .theme:hover {
-    background: #dddfe5;
+    background: var(--light-hover);
 }
 
 .slider {
-    background: #eceef0;
+    background: var(--light-accent);
 }
 
 .slider input[type="range"] {
-    background: black;
+    background: var(--light-outline);
 }
 
 .slider input[type="range"]::-webkit-slider-thumb {
-    background: white;
-    border: 2px solid black;
+    background: #fbfbfb;
+    border: 2px solid var(--light-outline);
 }
 
 .slider input[type="range"]::-webkit-slider-thumb:hover {
-    background: gray;
+    background: var(--light-hover);
 }
 
 .interface,
