--- a/css.css
+++ b/css.css
@@ -66,7 +66,6 @@ body {
 .slider input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none !important;
     appearance: none !important;
-    /* transition: .2s linear; */
     width: 15px;
     height: 15px;
     border-radius: 50%;
@@ -92,20 +91,43 @@ input[type="number"] {
 input[type="number"] {
     border: 0px;
     border-radius: 100px;
-    /* height: initial; */
     width: 60px;
-padding: 3px;
-text-align: center;
-    /* margin: 0; */
-
+    padding: 3px;
+    text-align: center;
+    outline: 2px solid black;
 }
 
-input[type="number"]:focus {
-    outline: 0px;
+input[type="number"]:out-of-range {
+    animation: shake 0.82s cubic-bezier(.36, .07, .19, .97) both;
+    outline: 2px solid red;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
     appearance: none;
+}
+
+@keyframes shake {
+
+    10%,
+    90% {
+        transform: translateX(-1px);
+    }
+
+    20%,
+    80% {
+        transform: translateX(2px);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translateX(-4px);
+    }
+
+    40%,
+    60% {
+        transform: translateX(4px);
+    }
 }
