--- a/css.css
+++ b/css.css
@@ -20,13 +20,13 @@ body {
     transition: .2s linear;
 }
 
-.button {
-    border: 0px;
-    border-radius: 100px;
-    transition: .2s linear;
-    padding: 10px 15px;
+.nav {
+    position: absolute;
     margin: 10px;
+    right: 0;
     display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .theme {
@@ -34,20 +34,48 @@ body {
     border-radius: 100px;
     width: 40px;
     height: 40px;
-    position: absolute;
     transition: .2s linear;
-    right: 0;
-    margin: 10px;
+    margin-bottom: 10px;
+}
+
+.lang {
+    text-align: center;
+    vertical-align: middle;
+    line-height: 40px;
+}
+
+a, a:visited {
+    outline: none;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+}
+
+.button {
+    border: 0px;
+    border-radius: 100px;
+    transition: .2s linear;
+    display: inline-flex;
+    padding: 10px 15px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    line-height: 29px;
+}
+
+.interface {
+    padding: 10px;
 }
 
 .slider {
     padding: 10px 15px;
-    margin: 10px;
-    margin-right: 0px;
+    margin-right: 10px;
+    margin-bottom: 10px;
     border-radius: 100px;
     display: inline-flex;
     align-items: center;
     transition: .2s linear;
+    height: 29px;
 }
 
 .slider p {
@@ -94,7 +122,7 @@ input[type="number"] {
     width: 60px;
     padding: 3px;
     text-align: center;
-    outline: 2px solid black;
+    transition: .2s linear;
 }
 
 input[type="number"]:out-of-range {
