--- a/css.css
+++ b/css.css
@@ -5,7 +5,7 @@ body {
 
 .chart {
     transform-origin: bottom left;
-    transform: translateY(-350px) rotate(90deg);
+    transform: translateY(-350px) rotate(90deg) translateX(-20px);
 }
 
 .canvases {
@@ -44,7 +44,8 @@ body {
     line-height: 40px;
 }
 
-a, a:visited {
+a,
+a:visited {
     outline: none;
     text-decoration: none;
     font-size: 18px;
@@ -65,6 +66,7 @@ a, a:visited {
 
 .interface {
     padding: 10px;
+    font-size: 0 !important;
 }
 
 .slider {
@@ -104,7 +106,8 @@ a, a:visited {
 .interface,
 .interface button,
 .theme,
-input[type="number"] {
+input[type="number"],
+.slider {
     font-size: 18px;
     font-weight: 500;
     font-family: 'Inter', sans-serif;
